# blog

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  about.qmd  index.html  index.qmd  listings.json  makefile  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
.quarto/idx/: about.qmd.json  index.qmd.json
.quarto/xref/: 800fcdb8  INDEX  e962baef
_site/: about.html  index.html  listings.json  search.json  sitemap.xml
_site/posts/: 2018-02-26-welcome.html  2018-03-21-entropy.html  2018-09-14-statistical-rethinking.html  2018-10-28-1cycle.html  2021-05-28-how-to-start-career-in-data-science.html  2021-05-29-effective-ml-dl-practitioner.html  2023-04-21-prompting.html  (+5 more)
personal_blog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
posts/: 2018-02-26-welcome.html  2018-02-26-welcome.ipynb  2018-03-21-entropy.html  2018-03-21-entropy.ipynb  2018-09-14-statistical-rethinking.html  2018-09-14-statistical-rethinking.ipynb  2018-10-28-1cycle.html  2018-10-28-1cycle.ipynb  2021-05-28-how-to-start-career-in-data-science.html  2021-05-28-how-to-start-career-in-data-science.ipynb  2021-05-29-effective-ml-dl-practitioner.html  2021-05-29-effective-ml-dl-practitioner.ipynb  2021-06-19-the-benefits-of-kaggle.html  2021-06-19-the-benefits-of-kaggle.ipynb  2023-04-16-chinchilla.html  2023-04-16-chinchilla.ipynb  2023-04-16-welcome.html  2023-04-16-welcome.ipynb  2023-04-17-chinchilla.html  2023-04-17-chinchilla.ipynb  2024-09-02-anki-llm-part-i.ipynb  2025-08-01-jujutsu-workflow.html  2025-08-01-jujutsu-workflow.ipynb
(+11 files in other folders)
