[project]
name = "personal-blog"
version = "0.0.1"
description = "A personal blog about AI/ML"
authors = [{name= "Gianluca Rossi" , email= "gr.gianlucarossi@gmail.com" }]
requires-python = ">=3.10"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "ipywidgets",
    "jupyterlab",
    "pynvim", # required for nvim lsp
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "*.egg-info",
    ".*",
    "build",
    "dist",
]

[tool.ruff]
src = ["src"]
extend-include = ["*.ipynb"]
lint.extend-select = ["I"]
lint.extend-ignore = ["E741"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
